--- a/src/scss/components/_bg-animation.scss
+++ b/src/scss/components/_bg-animation.scss
@@ -1,4 +1,7 @@
 .bg-animation {
+    // UNSURE
+    display: none;
+    // UNSURE
     opacity: 0;
     @media only screen and (min-width:834px) {
         position: fixed;
