--- a/src/scss/modules/_variables.scss
+++ b/src/scss/modules/_variables.scss
@@ -3,11 +3,13 @@ $primary-2: #fdfcf7;
 $primary-3: #FF003D;
 // $primary-3: rgb(238, 255, 0);
 $primary: #000;
+$primary: #1D1331;
 
 // $primary-2: #0e1927;
 // $primary: #FF003D;
 
 $color-mercury-go: #fff100;
+$color-mercury-kog: #fff100;
 $color-iod: #00C5B4;
 
 $secondary-50:  #E9FAF0;
