--- a/src/components/navigation.njk
+++ b/src/components/navigation.njk
@@ -1,24 +1,27 @@
 <!-- <img class="logo" src="./images/logo.svg" alt="Bradley Davis Logo"> -->
 
+{% macro navigation(page) %}
 
-<div class="reveal-boy">
-    <div class="navWrap">
-        <nav class="navPrimaryWrap">
-            <ul class="nav-ul">
-                <li><a href="./index.njk">Bradley Davis</a></li>
-                <li><a href="./mercury-go.njk">Mercury Go</a></li>
-                <li><a href="./iod.njk">IOD</a></li>
-                {# <li><div class="light-dark-mode dark"><a href="#"></a></div></li> #}
-                {# <li><a href="./about.njk">Mercury Kiss Oil Goodbye</a></li> #}
-            </ul>
-        </nav>
+    <div class="reveal-boy">
+        <div class="navWrap">
+            <nav class="navPrimaryWrap">
+                <ul class="nav-ul">
+                    <li id="nav-li-home"><a href="./index.njk" {% if page == "home" %} class="active" {% endif %}>Bradley Davis</a></li>
+                    <li id="nav-li-mercury-go"><a href="./mercury-go.njk" {% if page == "mercury-go" %} class="active" {% endif %}>Mercury Go</a></li>
+                    <li id="nav-li-iod"><a href="./iod.njk" {% if page == "iod" %} class="active" {% endif %}>IOD</a></li>
+                    <li id="nav-li-mercury-kog"><a href="./mercury-kog.njk" {% if page == "mercury-kog" %} class="active" {% endif %}>Kiss Oil Goodbye</a></li>
+                    {# <li><div class="light-dark-mode dark"><a href="#"></a></div></li> #}
+                    {# <li><a href="./about.njk">Mercury Kiss Oil Goodbye</a></li> #}
+                </ul>
+            </nav>
 
-        <div class="navContactWrap">
-            <ul class="contact-ul">
-                <li><a href="mailto:bradleydavis88@gmail.com">bradleydavis88@gmail.com</a></li>
-                {# <li><a href="tel:+6421484018">+64 21 484 018</a></li> #}
-            </ul>
+            <div class="navContactWrap">
+                <ul class="contact-ul">
+                    <li><a href="mailto:bradleydavis88@gmail.com">bradleydavis88@gmail.com</a></li>
+                    {# <li><a href="tel:+6421484018">+64 21 484 018</a></li> #}
+                </ul>
+            </div>
         </div>
     </div>
-</div>
 
+{% endmacro %}
