--- a/src/scss/components/_image-hero.scss
+++ b/src/scss/components/_image-hero.scss
@@ -1,32 +1,32 @@
-.image-hero-wrap {
-    grid-column: 1 / -1;
-    padding: 90px 8vw;
+.image-hero-grid {
+    grid-column: 2 / -1;
+    padding: 15vmin 0;
     overflow: hidden;
     background-image: linear-gradient(180deg, rgba($primary, 0) 0%, $primary 34%);
     z-index: 1;
-    @media only screen and (min-width:834px) {
+    @media only screen and (min-width:550px) {
         grid-column: 1 / -1;
-        padding: 150px 0;
     }
-    .image-hero {
+    .hero-wrap  {
         display: block;
         margin: 0 auto;
-        max-width: 852px;
+        max-width: 1200px;
         width: 160%;
 
-        @media only screen and (min-width:600px) {
-            width: auto;
+        @media only screen and (min-width:550px) {
+            max-width: 90vw;
             margin: 0 auto;
         }
-
-        &.image-hero-large {
-            max-width: 1230px;
+        @media only screen and (min-width:834px) {
+            max-width: 80vw;
+        }
+        @media only screen and (min-width:1280px) {
+            max-width: 1200px;
         }
 
-        &.image-hero-small {
-            max-width: 852px;
-        }
+    }
 
+    .image-hero {
         img {
             width: 100%;
             display: block;
