--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -74,34 +74,43 @@
                 }
             }
             @media only screen and (min-width:834px) {
-                &.active {
-                    box-shadow: inset -3px 0 0 0 $primary-3;
-                    color: $primary-3;
-                }
 
-                &:nth-child(odd) {
+                &#nav-li-iod {
                     a {
 
                         box-shadow: inset -1px 0 0 0 $primary-2;
                         transition: all .2s ease-in-out;
-                        &:hover {
+                        &:hover, &.active {
                             box-shadow: inset -3px 0 0 0 $color-iod;
                             color: $color-iod;
                         }
                     }
                 }
-                &:nth-child(even) {
+
+                &#nav-li-mercury-go {
                     a {
                         box-shadow: inset -1px 0 0 0 $primary-2;
                         transition: all .2s ease-in-out;
-                        &:hover {
+                        &:hover, &.active {
                             box-shadow: inset -3px 0 0 0 $color-mercury-go;
                             color: $color-mercury-go;
                         }
                     }
                 }
+
+                &#nav-li-mercury-kog {
+                    a {
+                        box-shadow: inset -1px 0 0 0 $primary-2;
+                        transition: all .2s ease-in-out;
+                        &:hover, &.active {
+                            box-shadow: inset -3px 0 0 0 $color-mercury-kog;
+                            color: $color-mercury-kog;
+                        }
+                    }
+                }
+
             }
-            &:nth-child(1) {
+            &#nav-li-home {
                 a {
                     box-shadow: none;
                     transition: color .2s ease-in-out;
@@ -124,23 +133,23 @@
                 grid-area: 2 / 6 / span 1 / span 6;
             }
             &:nth-child(3) {
-                grid-area: 3 / 1 / span 1 / span 11;
+                grid-area: 4 / 1 / span 1 / span 11;
             }
             &:nth-child(4) {
-                grid-area: 1 / 1 / span 1 / span 11;
+                grid-area: 3 / 1 / span 1 / span 11;
             }
             @media only screen and (min-width:834px) {
                 &:nth-child(1) {
                     grid-area: 1 / 2 / span 1 / span 5;
                 }
                 &:nth-child(2) {
-                    grid-area: 2 / 6 / span 1 / span 5;
+                    grid-area: 2 / 5 / span 1 / span 4;
                 }
                 &:nth-child(3) {
-                    grid-area: 1 / 6 / span 1 / span 5;
+                    grid-area: 1 / 5 / span 1 / span 4;
                 }
                 &:nth-child(4) {
-                    grid-area: 1 / 11 / span 1 / span 2;
+                    grid-area: 1 / 11 / span 1 / span 6;
                 }
             }
             @media only screen and (min-width:1280px) {
@@ -154,7 +163,7 @@
                     grid-area: 2 / 7 / span 1 / span 3;
                 }
                 &:nth-child(4) {
-                    grid-area: 1 / 15 / span 1 / span 2;
+                    grid-area: 1 / 10 / span 1 / span 5;
                 }
             }
             a {
