--- a/src/scss/components/_story.scss
+++ b/src/scss/components/_story.scss
@@ -20,6 +20,9 @@
             @media only screen and (min-width:834px) {
                 font-size: 9.4vw;
             }
+            @media only screen and (min-width:1280px) {
+                font-size: 8.4vw;
+            }
         }
     }
     p {
