--- a/src/scss/no-components/_layout.scss
+++ b/src/scss/no-components/_layout.scss
@@ -5,7 +5,7 @@
     grid-template-rows: auto;
         @media only screen and (min-width:834px) {
         background: $primary;
-        box-shadow: 0px 0px 90px 90px;
+        box-shadow: $primary 0px 0px 90px 90px;
         grid-template-columns: repeat(24, 1fr);
         grid-gap: 0 21px;
         &.homepage {
